--- a/package.json
+++ b/package.json
@@ -1,8 +1,7 @@
 {
-  "name": "berry-material-react-free",
-  "version": "3.0.1",
+  "name": "medimoi_app",
+  "version": "0.1.0",
   "private": true,
-  "homepage": "https://berrydashboard.io/free",
   "dependencies": {
     "@emotion/cache": "^11.4.0",
     "@emotion/react": "^11.4.0",
