--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@testing-library/user-event": "^12.8.3",
     "apexcharts": "^3.26.1",
     "axios": "^0.27.2",
+    "babel-eslint": "^10.1.0",
     "clsx": "^1.1.1",
     "formik": "^2.2.6",
     "framer-motion": "^4.1.13",
@@ -32,12 +33,12 @@
     "react-perfect-scrollbar": "^1.5.8",
     "react-redux": "^7.2.3",
     "react-router": "6.0.0-beta.0",
-    "redux": "^4.0.5",
-    "yup": "^0.32.9",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.0",
+    "redux": "^4.0.5",
     "sass": "^1.52.3",
-    "web-vitals": "^2.1.3"
+    "web-vitals": "^2.1.3",
+    "yup": "^0.32.9"
   },
   "scripts": {
     "start": "PORT=4010 react-scripts start",
