--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "clsx": "^1.1.1",
     "date-fns": "^2.29.1",
     "formik": "^2.2.6",
+    "formik-mui-lab": "^1.0.0",
     "framer-motion": "^4.1.13",
     "history": "^5.0.0",
     "material-ui-popup-state": "^1.8.0",
